    * 3985 FIX: mrpe: fixed broken long output when using the CMC...
    * 4035 FIX: df_zos: Fixed ignoring last filesystem after new discovery...
    * 3741 FIX: omd_status: Fix labelling and structure of several metric graphs

    Multisite:
    * 3970 SEC: Fixed possible URL injection on index page...


1.2.8p13:
    Checks & Agents:
    * 3822 FIX: MRPE commands longer than 256 characters got truncated...
    * 3958 FIX: netapp_qtree_quota: fixed graph scaling
    * 3937 FIX: check_mk_agent.aix: fixed hadling of mailq command
    * 3825 FIX: local check: no longer cuts away any trailing "9" digits in P mode
    * 3964 FIX: df_zos: Fixed not working filesystemcheck for IBM z/OS...
    * 3650 FIX: Fixed bash versionitis, unbreaking cached check results....
    * 3960 FIX: if.include: fixed wrong order if interface groups are configured
    * 3903 FIX: mssql.vbs: Fixed support for MSSQL server 2016
    * 3967 FIX: raritan_emx: Fixed broken check (wrong include temperature.includes)

    Multisite:
    * 3902 FIX: Graph search view: Changing painter options made page empty

    WATO:
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...

    Notifications:
    * 3968 FIX: Notifications / Alert handling: Fixed configuring nth notifications without state changes...


1.2.8p12:
    Core & Setup:
    * 3857 FIX: Creation of crash reports could lead to further bugs...
    * 3889 FIX: Fixed incompatiblity with Python 2.4 (CentOS 5.5) introduced with 1.2.8p11...
    * 3737 FIX: Fixed slow activation of changes due to loss of IP address cache...
    * 3893 FIX: Predictive levels: Improved handling of broken prediction files (empty files)...

    Checks & Agents:
    * 3934 mssql.vbs now detects MSSQL Server 2016 instances
    * 3837 FIX: Fixed empty check if lnx_if info contains additional line...
    * 3804 FIX: Datasource programs: fixed possible Check_MK Helper exception when creation of subprocess fails